Bug 101810 - CRASH - when selecting Bibliography from Tools menu in an open Writer document
Summary: CRASH - when selecting Bibliography from Tools menu in an open Writer document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-08-31 08:17 UTC by Alex Thurgood
Modified: 2016-10-21 16:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
backtrace from lldb debugging session (10.52 KB, text/plain)
2016-08-31 08:18 UTC, Alex Thurgood
Details
bt from linux gdb session (29.08 KB, text/x-emacs-lisp)
2016-08-31 08:37 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2016-08-31 08:17:11 UTC
In my master debug build

Version: 5.3.0.0.alpha0+
Build ID: 03f576466c9f110fbef8923604908654d59484a6
CPU Threads: 2; OS Version: Mac OS X 10.11.6; UI Render: default; 
Locale: fr-FR (fr.UTF-8); Calc: group

LO crashes immediately if I open a new Writer document and select Bibliography Database from the Tools menu.

bt enclosed.
Comment 1 Alex Thurgood 2016-08-31 08:18:21 UTC
Created attachment 127087 [details]
backtrace from lldb debugging session
Comment 2 Alex Thurgood 2016-08-31 08:37:20 UTC
Confirming also on my master LM18 build. BT enclosed.
Comment 3 Alex Thurgood 2016-08-31 08:37:49 UTC
Created attachment 127088 [details]
bt from linux gdb session
Comment 4 Xisco Faulí 2016-08-31 11:25:38 UTC
Issue introduced in range 8456d83ed928c9c14b833393d5e15f64e394a3b1..f4b8affe8f4bee197bf5ffb73d52fafee3e904db
Comment 5 Xisco Faulí 2016-08-31 11:45:47 UTC
Regression introduced by aa0d0536a444fb26d9e570bd6bf6c1bdc3596cf3. Reverting the code in extensions/source/bibliography/toolbar.cxx
and extensions/source/bibliography/toolbar.hxx fixes the problem.

@Noel: Could you please take a look at it?
Comment 6 Commit Notification 2016-08-31 13:13:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bdc4010565af5059a1aa331719fbee1d74a230eb

tdf#101810 - Crash when selecting Bibliography from Tools

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2016-09-01 07:28:38 UTC
No longer reproducible with

Version: 5.3.0.0.alpha0+
Build ID: c780c6726dca5e2fe33297e44f25ae3e00703294
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 8 Thomas Hackert 2016-10-21 15:36:03 UTC
Hello Alex, *,
it is not reproducible with
OS: Debian Testing AMD64
LO: Version: 5.3.0.0.alpha1
Build-ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; VCL: gtk2; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group
(parallel installed, following the instructions from https://wiki.documentfoundation.org/Installing_in_parallel/Linux w/ de_DE lang- as well as helppack)
would you be so kind to retry it on your system as well, please?
TIA
Thomas.
Comment 9 Alex Thurgood 2016-10-21 16:07:54 UTC
Yep, fixed for me too.