tdf#101810 - Crash when selecting Bibliography from Tools

fallout from commit aa0d0536 "tdf#97527 - vcl: reference-count Menu"

Change-Id: I996a5b739f35d034b15fd5d0b4c94fd57688bf12